--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -1,66 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>        
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <meta name="keywords"
+        content="Sanacion, Reconexion, Reconective Healing, Sanacion Recontectiva, Origen, Que es la Sanacion">
+    <meta name="description"
+        content="La Sanación Reconectiva es una técnica de sanación energética desarrollada por el quiropráctico y acupunturista estadounidense Dr. Eric Pearl. Según Pearl, su descubrimiento se produjo en 1993.
+    Reconnective Healing® es un retorno a un estado óptimo de equilibrio que resulta de interactuar con Energía, Luz e Información. Estudios recientes han demostrado que produce una transformación claramente beneficiosa en nuestro ADN y mejora el sistema inmunitario    ">
+    <link rel="icon" type="image/png" href="../images/faviconSR.png" />
+    <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <title>Sanacion Reconectiva</title>
+    <title>S R |Informacion|</title>
     <link rel="stylesheet" href="../style/main.css">
 </head>
+
 <body>
     <header>
         <nav class="nav">
 
             <div class="nav__container">
 
-                <img src="../images/logo.png" class="nav__logo"/>  
+                <img src="../images/logo.png" class="nav__logo" />
 
                 <label for="menu" class="nav__label">
                     <img src="../assets/menu.svg" alt="" class="nav__img">
                 </label>
                 <input type="checkbox" id="menu" class="nav__input">
-                
+
                 <div class="nav__menu">
                     <a href="../index.html" class="nav__item">Inicio</a>
                     <a href="./informacion.html" class="nav__item">Informacion</a>
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
-                    <a href="./usuario.html" class="nav__item">Usuario</a>           
-                    <a href="./nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
+                    <a href="./usuario.html" class="nav__item">Usuario</a>
+                    <a href="./nuestro-recorrido.html" class="nav__item">Ustedes</a>
+                </div>
             </div>
-        </div>
-    </nav> 
-</header>
-        <main>
-            <section class="height-info">
+        </nav>
+    </header>
+    <main>
+        <section class="height-info">
 
 
-                <article class="info">
-                    <div>
-                        <h1>Origen</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
-                        error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
-                        reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
-                    </div>
-                    <img class="info__img" src="../images/pexels-arina-krasnikova-6998275.jpg">
-                </article>
+            <article class="info">
+                <div>
+                    <h1>Origen</h1>
+                    <p>La Sanación Reconectiva es una técnica de sanación energética desarrollada por el quiropráctico y
+                        acupunturista estadounidense Dr. Eric Pearl. Según Pearl, su descubrimiento se produjo en 1993
+                        después de experimentar una serie de eventos inexplicables y milagrosos en su práctica de
+                        quiropráctica. Durante una sesión con una paciente, Pearl sintió una fuerza en sus manos y notó
+                        que la paciente comenzó a curarse de una enfermedad incurable. Desde entonces, Pearl ha
+                        trabajado para comprender y desarrollar esta técnica que utiliza una frecuencia de energía de
+                        luz y sonido para equilibrar y sanar el cuerpo, la mente y el espíritu. La Sanación Reconectiva
+                        ha ganado popularidad en todo el mundo y se utiliza como una terapia complementaria en muchos
+                        entornos médicos y terapéuticos.</p>
+                </div>
+                <img class="info__img" src="../images/pexels-arina-krasnikova-6998275.jpg" alt="SR image">
+            </article>
 
 
-                <article class="info">
-                    <div class="">
-                        <h2>¿Que es?</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a accusantium necessitatibus veniam 
-                        error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus, assumenda blanditiis itaque 
-                        reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.</p>
-                    </div>
-                    <img class="info__img" src="../images/pexels-anete-lusina-5240734.jpg">
-                </article>
+            <article class="info">
+                <div class="">
+                    <h2>¿Que es?</h2>
+                    <p>Reconnective Healing® es un retorno a un estado óptimo de equilibrio que resulta de interactuar
+                        con Energía, Luz e Información. Estudios recientes han demostrado que produce una transformación
+                        claramente beneficiosa en nuestro ADN y mejora el sistema inmunitario.
 
-            </section>
-        </main>
+                        Reconnective Healing® se recibe en su forma más alta cuando nos permitimos liberar expectativas.
+                        Restaura coherencia y armonía en nuestras vidas y transforma nuestros cuerpos, corazones, mentes
+                        y almas; física, mental, emocional, espiritualmente y de muchas otras maneras que pueden parecer
+                        imposibles. Los beneficios que aporta Reconnective Healing® están siendo estudiados por
+                        Científicos y Universidades de todo el mundo.</p>
+                </div>
+                <img class="info__img" src="../images/pexels-anete-lusina-5240734.jpg" alt="SR image">
+            </article>
+
+        </section>
+    </main>
     <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
@@ -88,7 +109,10 @@
         <div class="grupo-2">
             <small>&copy; 2023 <b>SANACION RECONECTIVA</b> - Todos los Derechos Reservados.</small>
         </div>
-    </footer> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
