--- a/pages/nuestras-practicas.html
+++ b/pages/nuestras-practicas.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Sanacion, Reconexion, Reconective Healing, Sanacion Recontectiva">
     <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
+    <meta name="description"
+        content="La sanacion reconectiva consta de dos practicas, la primera es la Reconexion personal, y la segunda es la misma Sanacion Reconectiva">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Sanacion Reconectiva</title>
+    <link rel="icon" type="image/png" href="../images/faviconSR.png" />
+    <title>S R |Nuestras Practicas|</title>
     <link rel="stylesheet" href="../style/main.css">
 </head>
 
@@ -31,50 +35,53 @@
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
-                    <a href="./usuario.html" class="nav__item">Nuestro Recorrido</a>
+                    <a href="./nuestro-recorrido.html" class="nav__item">Ustedes</a>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-            <section class="height-info">
+        <section class="height-info">
 
-                <article class="info">
-                    <div>
-                        <h1>Sanacion</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a
-                            accusantium necessitatibus veniam
-                            error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi
-                            beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus,
-                            assumenda blanditiis itaque
-                            reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum
-                            rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
-                            mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt
-                            vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.
-                        </p>
-                    </div>
-                    <img class="info__img" src="../images/sanacion.png">
-                </article>
+            <article class="info">
+                <div>
+                    <h1>Reconnective Healing ®</h1>
+                    <p>Es un retorno a la totalidad. A la vanguardia en su campo, es un nuevo nivel de “sanación”,tanto
+                        a nivel físico, mental, emocional y/o espiritual, al que los científicos e investigadores
+                        consideran que accedemos, como seres humanos, por primera vez.
+
+                        No requiere diagnóstico, pasos complicados, procedimientos o rituales. Simplemente se interactúa
+                        con las frecuencias de Reconnective Healing®, produciendo sanaciones que a menudo son
+                        instantáneas y tienden a durar toda la vida.
+
+                        Reconnective Healing es interacción con Energía, Luz & Información.
+                    </p>
+                </div>
+                <img class="info__img" src="../images/sanacion.png" alt="Sanacion image">
+            </article>
 
 
-                <article class="info">
-                    <div class="">
-                        <h2>Reconexion</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, aliquam est tenetur a
-                            accusantium necessitatibus veniam
-                            error sequi eaque laudantium officia fugiat doloribus sunt iusto nam distinctio eligendi
-                            beatae sit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam doloribus,
-                            assumenda blanditiis itaque
-                            reiciendis tenetur consequuntur expedita nulla vero in et ut quod at exercitationem dolorum
-                            rem vitae quis fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
-                            mollitia, necessitatibus harum nihil aspernatur laborum alias recusandae earum, deserunt
-                            vitae voluptate. Consectetur numquam natus nisi reiciendis magni dicta voluptate delectus.
-                        </p>
-                    </div>
-                    <img class="info__img" src="../images/reconexion.png">
-                </article>
+            <article class="info">
+                <div class="">
+                    <h2>La Reconexión Personal</h2>
+                    <p>Utiliza las frecuencias de Reconnective Healing® pero difiere en su aplicación.
 
-            </section>
+                        Es una formación enfocada y muy precisa, que vuelve a conectar las líneas Ley de la Tierra, las
+                        líneas de los meridianos del cuerpo y la cuadrícula universal, en todas las dimensiones de
+                        tiempo y espacio.
+                        The Personal Reconnection® es una experiencia única en la vida.
+                        En tu Reconexión Personal®, te conectás a un sistema atemporal de inteligencia, a tu vibración
+                        maestra y a tu evolución. Estás eligiendo activamente acceder a todo lo que has aprendido a lo
+                        largo de tu vida, en esta dimensión y más allá. Es un proceso continuo y progresivo que se
+                        desarrollará a medida que comiences a tomar nuevas decisiones en tu vida, avanzando hacia tu
+                        progreso de vida y tu propia evolución. Muchos de los que han experimentado su Reconexión
+                        Personal. Simplemente dicen: “La vida es más fácil”.
+                    </p>
+                </div>
+                <img class="info__img" src="../images/reconexion.png" alt="Reconecxion image">
+            </article>
+
+        </section>
     </main>
     <footer class="pie-pagina">
         <div class="grupo-1">
