--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Sanacion, Reconexion, Reconective Healing, Sanacion Recontectiva">
     <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
+    <meta name="description"
+        content="Bienvenido a nuestra página web de sanación reconectiva. Nos complace ofrecerte un espacio donde puedas explorar y descubrir los beneficios de esta práctica curativa.">
+    <link rel="icon" type="image/png" href="./images/faviconSR.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Sanacion Reconectiva</title>
+    <title>S R |Inicio|</title>
     <link rel="stylesheet" href="./style/main.css">
 </head>
 
@@ -31,23 +35,24 @@
                     <a href="./pages/nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./pages/contacto.html" class="nav__item">Contactenos</a>
                     <a href="./pages/usuario.html" class="nav__item">Usuario</a>
-                    <a href="./pages/nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
+                    <a href="./pages/nuestro-recorrido.html" class="nav__item">Ustedes</a>
                 </div>
             </div>
         </nav>
     </header>
     <main>
         <section class="centre">
-            <div class="main__layout">
+            <div class="main__layout-2">
                 <div class="main__organization">
                     <div class="divi">
                         <h1>¡Bienvenidos a Sanacion Reconectiva!</h1>
                         <h3>Encontraste lo que necesitabas y no te arrepentiras!</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat debitis perferendis
-                            odio
-                            veniam veritatis praesentium voluptatibus laborum. Rerum itaque sequi dolorum! A minima
-                            iste
-                            optio ex? Temporibus accusantium illo nihil.
+                        <p>Bienvenido a nuestra página web de sanación reconectiva. Nos complace ofrecerte un espacio
+                            donde puedas explorar y descubrir los beneficios de esta práctica curativa. La sanación
+                            reconectiva es una técnica energética que busca restaurar la conexión entre el cuerpo, la
+                            mente y el espíritu, promoviendo la salud y el bienestar holístico. Esperamos que encuentres
+                            en nuestra página una fuente de inspiración y una guía en tu camino hacia la sanación y el
+                            equilibrio interior.
                         </p>
                         <a href="./pages/informacion.html"> <button class="masInfo">Mas Informacion!</button></a>
                     </div>
@@ -55,13 +60,15 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./images/pexels-tina-nord-816377 (1).jpg" class="d-block w-100" alt="...">
+                            <img src="./images/pexels-tina-nord-816377 (1).jpg" class="d-block w-100"
+                                alt="Equilibrio image">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/pexels-pixabay-355863.jpg" class="d-block w-100" alt="...">
+                            <img src="./images/pexels-pixabay-355863.jpg" class="d-block w-100" alt="Equilibrio image">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/pexels-pixabay-268134.jpg" class="d-block w-100" alt="...">
+                            <img src="./images/pexels-pixabay-268134.jpg" class="d-block w-100"
+                                alt="..Meditation image">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
