--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
+    <meta name="keywords"
+        content="Sanacion, Reconexion, Reconective Healing, Sanacion Recontectiva, Contacto, Mail, Redes sociales">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Sanacion Reconectiva</title>
+    <link rel="icon" type="image/png" href="../images/faviconSR.png" />
+    <title>S R |Contacto|</title>
     <link rel="stylesheet" href="../style/main.css">
 </head>
 
@@ -31,7 +34,7 @@
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
-                    <a href="./usuario.html" class="nav__item">Nuestro Recorrido</a>
+                    <a href="./nuestro-recorrido.html" class="nav__item">Ustedes</a>
                 </div>
             </div>
         </nav>
