--- a/pages/nuestro-recorrido.html
+++ b/pages/nuestro-recorrido.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5278f8b921.js" crossorigin="anonymous"></script>
+    <meta name="keywords"
+        content="Sanacion, Reconexion, Reconective Healing, Sanacion Recontectiva, Testimonios,Opiniones">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Sanacion Reconectiva</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="icon" type="image/png" href="../images/faviconSR.png" />
+    <title>S R |Testimonios|</title>
+    <link rel="stylesheet" href="../style/main.css">
 </head>
 
 <body>
@@ -31,14 +34,141 @@
                     <a href="./nuestras-practicas.html" class="nav__item">Nuestras Practicas</a>
                     <a href="./contacto.html" class="nav__item">Contactenos</a>
                     <a href="./usuario.html" class="nav__item">Usuario</a>
-                    <a href="./nuestro-recorrido.html" class="nav__item">Nuestro Recorrido</a>
+                    <a href="./nuestro-recorrido.html" class="nav__item">Ustedes</a>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-        <section class="main__div__textimg__1">
-            <h1>PAGINA EN PROCESO. VUELVA MAS TARDE :)</h1>
+        <section class="height-testimonial">
+            <div>Desliza el cursor sobre los nombres para leer los testimonios!</div>
+            <div class="container-fluid">
+                <div class="row">
+
+                    <div class="col-xl-4 col-sm-12">
+                        <div class="deploy-menu">
+                            <div class="divi1"><span class="title-name">Isabella Rodríguez</span>
+                                <p>"Después de años de lidiar con dolor crónico, decidí probar la Sanación Reconectiva.
+                                    Fue una
+                                    experiencia increíblemente transformadora. Sentí como si una luz brillante me
+                                    estuviera
+                                    llenando por dentro, y el dolor simplemente desapareció. Ahora me siento más
+                                    equilibrado y
+                                    en paz que nunca."</p>
+
+                                <div class="testimonial-info">
+                                    <img class="testimonial-img" src="../images/isabella.jpg" alt="testimonial image">
+                                    <div class="testimonial-name">
+                                        <span><b> Isabella Rodríguez </b></span>
+                                        <span>CEO, XYZ Company</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-4 col-sm-12">
+                        <div class="deploy-menu">
+                            <div class="divi1"><span class="title-name">Olivia Torres</span>
+                                <p>"Como terapeuta, he recomendado la Sanación Reconectiva a muchos de mis pacientes
+                                    que
+                                    luchan
+                                    con problemas emocionales y físicos. Los resultados que he visto son realmente
+                                    sorprendentes. Incluso mis pacientes más escépticos han informado mejoras
+                                    significativas en
+                                    su bienestar y salud general".</p>
+
+                                <div class="testimonial-info">
+                                    <img class="testimonial-img" src="../images/olivia.jpg" alt="testimonial image">
+                                    <div class="testimonial-name">
+                                        <span><b> Olivia Torres </b></span>
+                                        <span>Terapeuta Profesional</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="col-xl-4 col-sm-12">
+                        <div class="deploy-menu">
+                            <div class="divi1"><span class="title-name">Rafael Marquez</span>
+                                <p>"Después de una lesión deportiva, me sentía frustrado y desmotivado. Mi
+                                    entrenador me
+                                    recomendó probar la Sanación Reconectiva. Me sorprendió lo rápido que comencé a
+                                    sentir
+                                    mejoras en mi recuperación física. Además, también pude lidiar mejor con la
+                                    frustración
+                                    emocional que sentía debido a mi lesión. ¡Recomiendo la Sanación Reconectiva a
+                                    cualquiera
+                                    que necesite ayuda para sanar!".</p>
+
+                                <div class="testimonial-info">
+                                    <img class="testimonial-img" src="../images/rafa.jpg" alt="testimonial image">
+                                    <div class="testimonial-name">
+                                        <span><b> Rafael Marquez</b></span>
+                                        <span>Deportista Profesional</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-6 col-sm-12">
+                        <div class="testimonial-centre">
+                            <div class="deploy-menu">
+                                <div class="divi1"><span class="title-name">Emilia García</span>
+                                    <p>"La Sanación Reconectiva me ayudó a superar un trauma emocional que me había
+                                        estado
+                                        afectando
+                                        durante años. Después de unas pocas sesiones, comencé a sentir una sensación de
+                                        calma y
+                                        claridad en mi mente. Ahora puedo decir con confianza que he dejado atrás el
+                                        pasado
+                                        y
+                                        estoy
+                                        lista para avanzar."</p>
+
+                                    <div class="testimonial-info">
+                                        <img class="testimonial-img" src="../images/emilia.jpg" alt="testimonial image">
+                                        <div class="testimonial-name">
+                                            <span><b>Emilia Garcia</b></span>
+                                            <span>Paciente</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-6 col-sm-12">
+                        <div class="testimonial-centre">
+                            <div class="deploy-menu">
+                                <div class="divi1"><span class="title-name">Liam Cruz</span>
+                                    <p>"Hice una sesión de Sanación Reconectiva como una forma de liberar el estrés
+                                        y la
+                                        ansiedad
+                                        antes de un examen importante. Fue increíble cómo después de la sesión me
+                                        sentí
+                                        más
+                                        tranquilo y concentrado. Realmente siento que la Sanación Reconectiva me
+                                        ayudó a
+                                        obtener
+                                        mejores resultados en el examen".</p>
+
+                                    <div class="testimonial-info">
+                                        <img class="testimonial-img" src="../images/liam.jpg" alt="testimonial image">
+                                        <div class="testimonial-name">
+                                            <span><b> Liam Cruz </b></span>
+                                            <span>Estudiante</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
         </section>
     </main>
     <footer class="pie-pagina">
@@ -52,8 +182,9 @@
             </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, modi iusto explicabo molestias
+                    officiis earum! Autem blanditiis natus, doloribus accusantium optio quaerat voluptas illum deserunt,
+                    eius aperiam inventore debitis nisi?</p>
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
