--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
             </div>
             <div class="box">
                 <h2>CONTACTO</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Bienvenido/a a nuestra página web de Sanación Reconectiva. Somos un equipo de profesionales dedicados
+                    a ayudar a las personas a encontrar su equilibrio y armonía interna a través de la práctica de la
+                    Sanación Reconectiva.</p>
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
