--- a/pages/ustedes.html
+++ b/pages/ustedes.html
@@ -41,7 +41,7 @@
     <main class="height-testimonial">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xl-4 col-sm-12">
+                <div class="col-xl-4 col-sm-12 col-md-6">
                     <div class="deploy-menu">
                         <div class="divi1"><span class="title-name">Isabella Rodríguez</span>
                             <p>"Después de años de lidiar con dolor crónico, decidí probar la Sanación Reconectiva.
@@ -63,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-sm-12">
+                <div class="col-xl-4 col-sm-12 col-md-6">
                     <div class="deploy-menu">
                         <div class="divi1"><span class="title-name">Olivia Torres</span>
                             <p>"Como terapeuta, he recomendado la Sanación Reconectiva a muchos de mis pacientes
@@ -85,7 +85,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-sm-12">
+                <div class="col-xl-4 col-sm-12 col-md-6">
                     <div class="deploy-menu">
                         <div class="divi1"><span class="title-name">Rafael Marquez</span>
                             <p>"Después de una lesión deportiva, me sentía frustrado y desmotivado. Mi
@@ -109,7 +109,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-6 col-sm-12">
+                <div class="col-xl-6 col-sm-12 col-md-6">
                     <div class="testimonial-centre">
                         <div class="deploy-menu">
                             <div class="divi1"><span class="title-name">Emilia García</span>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-6 col-sm-12">
+                <div class="col-xl-6 col-sm-12 col-md-6">
                     <div class="testimonial-centre">
                         <div class="deploy-menu">
                             <div class="divi1"><span class="title-name">Liam Cruz</span>
@@ -176,9 +176,9 @@
             </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, modi iusto explicabo molestias
-                    officiis earum! Autem blanditiis natus, doloribus accusantium optio quaerat voluptas illum deserunt,
-                    eius aperiam inventore debitis nisi?</p>
+                <p>Bienvenido/a a nuestra página web de Sanación Reconectiva. Somos un equipo de profesionales dedicados
+                    a ayudar a las personas a encontrar su equilibrio y armonía interna a través de la práctica de la
+                    Sanación Reconectiva.</p>
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
