--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,16 +39,16 @@
         </nav>
     </header>
     <main class="centre">
-            <div class="main__layout">
-                <div class="main__organization">
-                    <div class="divi">
-                        <h1 class=>Contactanos!</h1>
-                        <p><b>Mail:</b> SReconectiva@gmail.com</p>
-                        <p><b>WhatsApp:</b>+54 9 1111111111</p>
-                        <p><b>Telefono:</b> +54 9 1111111111 </p>
-                        <p><b>Instagrma:</b>SanacionReconectiva_</p>
-                    </div>
+        <div class="main__layout">
+            <div class="main__organization">
+                <div class="divi">
+                    <h1 class=>Contactanos!</h1>
+                    <p><img src="../assets/icons8-nuevo-post-30.png"> SReconectiva@gmail.com</p>
+                    <p><img src="../assets/icons8-whatsapp.svg">+54 9 1111111111</p>
+                    <p><img src="../assets/icons8-nuevo-post-30.png"> +54 9 1111111111 </p>
+                    <p><img src="../assets/icons8-instagram-24.svg">SanacionReconectiva</p>
                 </div>
+            </div>
             <div class="login">
                 <form class="loginform">
                     <h2>Deja tu contacto!</h2>
@@ -76,8 +76,9 @@
             </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Bienvenido/a a nuestra página web de Sanación Reconectiva. Somos un equipo de profesionales dedicados
+                    a ayudar a las personas a encontrar su equilibrio y armonía interna a través de la práctica de la
+                    Sanación Reconectiva.</p>
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
