--- a/pages/nuestras-practicas.html
+++ b/pages/nuestras-practicas.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main class="height-info">
-        <article class="info">            
+        <article class="info">
             <img class="info__img" src="../images/sanacion.png" alt="Sanacion image">
             <div>
                 <h1>Reconnective Healing ®</h1>
@@ -54,7 +54,7 @@
                 </p>
             </div>
         </article>
-        <article class="info">            
+        <article class="info">
             <img class="info__img" src="../images/reconexion.png" alt="Reconecxion image">
             <div>
                 <h2>La Reconexión Personal</h2>
@@ -85,8 +85,9 @@
             </div>
             <div class="box">
                 <h2>SOBRE NOSOTROS</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?</p>
+                <p>Bienvenido/a a nuestra página web de Sanación Reconectiva. Somos un equipo de profesionales dedicados
+                    a ayudar a las personas a encontrar su equilibrio y armonía interna a través de la práctica de la
+                    Sanación Reconectiva.</p>
             </div>
             <div class="box">
                 <h2>SIGUENOS</h2>
