--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,10 +43,10 @@
             <div class="main__organization">
                 <div class="divi">
                     <h1 class=>Contactanos!</h1>
-                    <p><img src="../assets/icons8-nuevo-post-30.png"> SReconectiva@gmail.com</p>
+                    <p><img src="../images/icons8-nuevo-post-30.png"> SReconectiva@gmail.com</p>
                     <p><img src="../assets/icons8-whatsapp.svg">+54 9 1111111111</p>
-                    <p><img src="../assets/icons8-nuevo-post-30.png"> +54 9 1111111111 </p>
                     <p><img src="../assets/icons8-instagram-24.svg">SanacionReconectiva</p>
+                    <p><img src="../images/icons8-teléfono-26.png">+54 9 1111111111</p>
                 </div>
             </div>
             <div class="login">
